--- a/perfect-woocommerce-brands/languages/perfect-woocommerce-brands.pot
+++ b/perfect-woocommerce-brands/languages/perfect-woocommerce-brands.pot
@@ -2,14 +2,14 @@
 # This file is distributed under the GPLv3.
 msgid ""
 msgstr ""
-"Project-Id-Version: Perfect Brands WooCommerce 3.3.4\n"
+"Project-Id-Version: Perfect Brands WooCommerce 3.3.5\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/perfect-woocommerce-brands\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2024-03-02T09:30:41+00:00\n"
+"POT-Creation-Date: 2024-03-05T15:31:13+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.10.0\n"
 "X-Domain: perfect-woocommerce-brands\n"
@@ -952,7 +952,7 @@ msgid "Hello! We have a special gift!"
 msgstr ""
 
 #: vendor_packages/wp-notice-plugin-promote.php:74
-msgid "Today we want to make you a special gift. Using the coupon code %1$s before the next 48 hours you can get a 20 percent discount on the premium version of the %2$s plugin."
+msgid "Today we have a special gift for you. Use the coupon code %1$s within the next 48 hours to receive a 20% discount on the premium version of the %2$s plugin."
 msgstr ""
 
 #: vendor_packages/wp-notice-plugin-promote.php:82
